--- a/style.css
+++ b/style.css
@@ -3,13 +3,19 @@
     position: fixed;
     top: 0;
     width: 100%
+    
   }
   h1{
     background-color: rgba(206, 238, 170, 0.781);
+    padding:15px ;
+    margin: auto;
   }
-  .card-text{
-      background-color: rgba(206, 238, 170, 0.781) ;
+  h2{
+      color: rgb(100, 148, 100);
+      padding:15px ;
+      margin: auto;
   }
+  
   footer{
     background-color: rgba(206, 238, 170, 0.781);
     text-align: center;
@@ -19,16 +25,28 @@
     width: 100%
 }
 
- 
+ .card-text{
+     text-align: center;
+     float: center;
+ }
   
   html, body {
     height: 100%;
   }
-   
+   #MyPhoto{
+       height: 40%;
+       width: 40%;
+
+   }
   img{
-     width: 250px;
+     width: 15%px;
+     height: 15%px;
   }
   
   .container{
       float: left;
   }
+  p{
+      font-size: 1.5em;
+  }
+  
