--- a/style.css
+++ b/style.css
@@ -46,12 +46,12 @@
       float: left;
   }
   
- /* .card{
+ .card{
      margin: auto;
      padding:10px;
      height: 15%;
      width: auto;
- } */
+ }
  .card-text{
      text-align: center;
      float: center;
