--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
    .card-text{
      width: 100%;
      text-align: center;
-     font-size: 2em;
+     font-size: 1.5em;
      background-color:white;
     
 
@@ -70,6 +70,7 @@
    .card img{
      width: 18rem;
      height: 20rem;
+     border-radius: 50%;
    }
   
    #MyPhoto{
