--- a/style.css
+++ b/style.css
@@ -45,8 +45,7 @@
       font-size: 1.2em;
   }
   
-
-  
+ 
   
    .container{
       float: left;
@@ -79,9 +78,14 @@
      padding-left: 20px;
        height:90%;
        width: 90%;
+       opacity: 0.9;
    }
   #mainContainer{
-    @media (max-width: 767.98px)
+    @media (max-width: 767.98px);
+    
+     
+    
+
   }
   
  
