--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
    body {
     height: 100%;
+    background-color: black;
+    color:white;
     margin: auto;
     scroll-padding-top: 15px;
     scroll-padding-bottom: 15px;
@@ -14,6 +16,7 @@
     bottom: 0;
     width: 100%
 }
+
   .h1{
     position: fixed;
     top: 0;
@@ -21,9 +24,16 @@
     
      
   }
+ hr{
+    border-top:1px solid white;
+    
+  }
+  .display-4{
+    background: black;
+  }
   h1{
     background-color:rgb(199, 199, 199) ;
-    text-align: center;
+    text-align: left;
     font-family: 'Shadows Into Light', cursive;
     font-size: xxx-large;
   }
@@ -63,10 +73,20 @@
     font-size: 1.5em;
     text-align: center;
     font-weight: normal;
+    color:black;
   }
-    
+    .jumbotron{
+      background-color: black;
+      color: white;
+      padding: 4%;
+      margin-right:10%;
+      margin-top:10%;
+      margin-top:10%
+    }
 
- 
+ .lead{
+   font-size: 1.5em;
+ }
    .card img{
      
      height: 20rem;
@@ -88,7 +108,10 @@
 
   }
   
-     
+     a{
+       color: white;
+       font-size:1.5em;
+     }
   
   
   
