--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
  footer{
     background-color:rgb(199, 199, 199);
     text-align: center;
-    font-size: x-large;
+    
     position: fixed;
     bottom: 0;
     width: 100%
@@ -56,8 +56,11 @@
   }
   
  a{
-   color:gray;
- }
+  
+    color: white;
+    font-size:1.5em;
+  }
+ 
   
    
   
@@ -75,6 +78,13 @@
     font-weight: normal;
     color:black;
   }
+  .link{
+    font-size: 0.8em;
+    text-align: center;
+    font-weight:small;
+    color:black;
+
+  }
     .jumbotron{
       background-color: black;
       color: white;
@@ -87,31 +97,29 @@
  .lead{
    font-size: 1.5em;
  }
+ /* .button{
+   color: black;
+   position: absolute;
+   top: 60%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   
+ } */
    .card img{
      
      height: 20rem;
      border-radius: 45%;
    }
   
-   #MyPhoto{
-     margin: auto;
-     /* padding-left: 20px;
-       height:90%;
-       width: 90%;
-       opacity: 0.9; */
-       border-radius: 50%;
-       
-   }
+  
   #mainContainer{
     @media (max-width: 767.98px);
+    padding: 3%;
     
 
   }
   
-     a{
-       color: white;
-       font-size:1.5em;
-     }
+     
   
   
   
